--- a/style.css
+++ b/style.css
@@ -115,8 +115,8 @@ nav .nav .nav__title {
 
 #me {
   background-color: #E3F6F5;
-  height: 10%;
   margin-left: 7px;
+  font-size: large;
 }
 #me__blurb {
   background-color: #E3F6F5;
@@ -137,18 +137,20 @@ nav .nav .nav__title {
 .interests__list {
   margin: 5px;
   padding: 5px;
+  font-size: large;
+}
+.interests__list--items {
+  font-family: "Poppins";
+  color: midnightblue;
+  background-color: #E3F6F5;
+  padding-top: 10px;
+  margin: 10px;
 }
 .interests__heading {
   background-color: #E3F6F5;
   display: flex;
   flex-direction: column;
   color: gold;
-}
-.interests__heading--items {
-  font-family: "Poppins";
-  color: midnightblue;
-  background-color: #E3F6F5;
-  margin: 5px;
 }
 .interests .balls {
   display: flex;
